2009-07-27 18:05 adburton

	* data/main_gui.glade: Delete redundant main window Glade file
	* data/: Makefile.am, filter_bar.glade: Add new Glade file to support the filter bar
	* src/: Makefile.am, game_list.c, gmameui-gamelist-view.c,
	  gmameui-statusbar.c, gmameui-statusbar.h, gmameui.c, gui.h, interface.c,
	  interface.h, io.c: Add new object for statusbar, show progressbar in
	  statusbar when loading gamelist from startup and auditing ROMs after
	  gamelist rebuild
	* po/POTFILES.in: Update source files for translations

2009-07-27 21:00 adburton

	* src/: callbacks.c, callbacks.h, game_list.c, game_list.h,
	  gmameui-gamelist-view.c, gmameui-gamelist-view.h, gmameui.c, gui.c,
	  interface.c, interface.h: Load gamelist and populate gamelist view after
	  GUI is displayed, automatically trigger audit after gamelist rebuild is
	  performed, update gamelist view as audit is occurring

2009-07-25 15:50 adburton

	* data/main_gui.glade, src/: callbacks.c, gmameui-audit-dlg.c,
	  gmameui-gamelist-view.c, gmameui-gamelist-view.h, gmameui-ui.xml, gui.c,
	  gui.h, interface.c, interface.h: Initiate audit after gamelist is rebuilt.
	  UI changes: radio choice between ListView and ListDetailsView is now a
	  toggle, replace Rebuild Game List with Refresh, remove current ROM name
	  and status from statusbar

2009-07-24 21:10 adburton

	* src/: audit.c audit.h: Move ROMSET_AUDITED signal to the correct place,
	  change function prototype to return const to avoid free corruption

2009-07-12 13:45 adburton

	* src/: gmameui-gamelist-view.c gmameui-gamelist-view.h filters_list.c
	  filters_list.h gmameui.c gmameui.h interface.c: Move filter setup code
	  into filters_list.c, improve speed of switching between filters on the LHS
	  and the filter buttons at the top of the gamelist by not rebuilding the
	  entire GtkTreeModel whenever the filter is changed, prompt user to rebuild
	  gamelist if it is out of date or missing at startup

2009-07-12 13:42 adburton
